Mon Dec 11 12:42:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmIndexerMessage::get_element and ...::operator[] now have
	  non-const versions.  Fixes const-warning in omstemmernode.cc.

Mon Dec 11 12:17:32 GMT 2000 Olly Betts

	* Better typedef-s for Om*Iterator::difference_type.

Sun Dec 10 17:51:41 GMT 2000 Olly Betts

	* Corrected various typedef-s for Om*Iterator.

Sun Dec 10 17:28:59 GMT 2000 Olly Betts

	* Updated TODO to reflect OmESet being cleaned up.

	* Term position argument to OmDocument::add_posting() is now
	  optional (as it was for OmDocumentContents).

Sun Dec 10 16:55:17 GMT 2000 Olly Betts

	* OmESetItem is dead - long live OmESetIterator!

	* net/socketclient.cc: fixed compiler warning.

	* net/socketserver.cc: fixed compiler warning.

Sun Dec 10 13:29:15 GMT 2000 Olly Betts

	* Started to encapsulate OmESet/OmESetItem interface.  Interface is
	  close, but currently implementation is exposed in omenquire.h.
	  
	* apitest wasn't running puncterms1 or spaceterms1 - fixed.
 
Sun Dec 10 11:34:39 GMT 2000 Olly Betts

	* om/autoptr.h -> autoptr.h in lots of places.

Fri Dec  8 17:20:04 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updated indextest to not use AutoPtr<OmIndexer>

Fri Dec  8 17:14:09 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Oops - removed one too many #include "autoptr.h"

Fri Dec 08 16:50:42 GMT 2000 Olly Betts

	* Updated TODO.

Fri Dec  8 16:44:26 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* IndexerBuilder now returns OmIndexer objects instead of
	  AutoPtr<OmIndexer>.  OmIndexer's internals are reference
	  counted.
	
	* Moved autoptr.h from include/om to common/, since it's no
	  longer used in the API.

Fri Dec  8 16:22:48 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed omstemmer node bug and made debug slightly more verbose
	  in indextest.cc.

Fri Dec  8 16:13:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
