@@ -1,3 +1,7 @@
+Mon Dec 11 13:24:45 GMT 2000 Olly Betts
+
+	* OmRSet internals encapsulated.
+
 Mon Dec 11 12:42:02 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* OmIndexerMessage::get_element and ...::operator[] now have
